package com.ab.command;

/**
 * @author ab
 * @description
 * @date
 */
public class LightReceiver {
    public void on() {
        System.out.println("电灯打开");
    }

    public void off() {
        System.out.println("电灯关闭");
    }

}
